# gentle

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
infra/: kind-config.yaml
infra/cert-manager/: ca-issuer.yaml  default-certificate-wildcard.yaml  kustomization.yaml
infra/database/postgresql/: deployment.yaml  initdbscript.sh  kustomization.yaml  persistent-volume.yaml  service-host.yaml  service.yaml
infra/monitoring/kube-prometheus/: values.yaml
infra/monitoring/loki/: values.yaml
infra/networking/coredns/: coredns-config.yaml
infra/networking/dnsmasq/: deployment.yaml  dnsmasq.conf  kustomization.yaml  service.yaml
infra/networking/ingress/nginx/: values.yaml
src/: main.rs
src/certs/: mod.rs
src/database/: mod.rs
src/kind/: mod.rs
src/monitoring/: mod.rs
src/networking/: mod.rs
src/utils/: mod.rs  preconditions.rs
